--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
               margin: 0px;
               padding: 0px;
               border: 0px;
+              margin-right: auto;
+              margin-left: auto;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
