--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
               border: 0px;
               margin-right: auto;
               margin-left: auto;
+              margin-top: auto;
+              margin-bottom: auto;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
