--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                       -webkit-interpolation-mode: nearest-neighbor;
                       -ms-touch-action: none;
                       margin: 0px;
+                      width: -webkit-fill-available;
+                      height: -webkit-fill-available;
                       padding: 0px;
                       border: 0px;
             }
