--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
               margin: 0px;
               padding: 0px;
               border: 0px;
-              margin-right: auto;
-              margin-left: auto;
-              margin-top: auto;
-              margin-bottom: auto;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
@@ -83,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/retrogml.js?LYXXB=266962883"></script>
+        <script type="text/javascript" src="html5game/retrogml.js?SNWXB=1385599499"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
